cmake_minimum_required(VERSION 2.6)
project(test)
add_library(testLib_static STATIC include/testLib.hpp src/testLib.cpp)
add_library(testLib_dynamic SHARED include/testLib.hpp src/testLib.cpp)
set_target_properties(testLib_static PROPERTIES OUTPUT_NAME "LibTest")
set_target_properties(testLib_dynamic PROPERTIES OUTPUT_NAME "LibTest")
set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
set(CMAKE_DEBUG_POSTFIX "-debug")
set(CMAKE_RELEASE_POSTFIX "-release")
add_executable(test src/main.cpp)
add_dependencies(test testLib_static)
add_dependencies(test testLib_dynamic)
include_directories(include)
target_link_libraries(test testLib_static)